--- a/index.html
+++ b/index.html
@@ -111,11 +111,26 @@ Computerlinguistik“ handelt.
 
 
 --
-## Das Semester im Überblick 
+## Das Semester im Überblick
+
+---
+### Praktische Hinweise
+* Den exakten Semesterplan finden Sie im StudIP-Kursraum im Wiki
+* Alle Recherche-Aufgaben finden Sie dort im Bereich DoIT! 
+* Der Zoom-Link für die synchronen Sessions steht auch dort 
+* Diese Folien finden Sie jederzeit unter: https://dh-trier.github.io/dh-stem
+* Die Folien werden laufend um neue Themen ergänzt
+* Eine Bibliographie mit einführenden Lektüren finden Sie hier: https://www.zotero.org/groups/2162827/dh-bibliographie_trier/library
+
 
 ---
 ### Veranstaltungsformen
-
+* Die Veranstaltung ist in Wochen gegliedert
+* Sie findet teils asynchron, teils synchron statt
+* Jede Woche gibt es:
+  * Einen Termin als Videokonferenz (synchron) zur Besprechung von Aufgaben oder Diskussion von Themen;
+  * Eine Aufgabe zur Vorbereitung auf das Thema der folgenden Woche. Die Aufgabe kann eine Rechercheaufgabe sein oder die Auseinandersetzung mit einem Screencast.
+  * Ggfs. weitere Aktivitäten vor allem zur Vorbereitung des Posters
 
 
 ---
@@ -134,8 +149,64 @@ Computerlinguistik“ handelt.
 --
 ## Thema 1: Was sind die Digital Humanities?
 
+---
+### whatisdigitalhumanities.com
+<img height="500" data-src="img/1_whatisdh.png">
 
 
+--
+## Thema 2: Digitale Edition
+
+---
+### XYZ
+<img height="500" data-src="img/1_XYZ.png">
+
+--
+## Thema 3: Computational Literary Studies
+
+---
+### XYZ
+<img height="500" data-src="img/1_XYZ.png">
+
+
+--
+## Thema 4: Digitale Musikwissenschaft
+
+---
+### XYZ
+<img height="500" data-src="img/1_XYZ.png">
+
+
+--
+## Thema 5: Stilometrische Autorschaftsattribution
+
+---
+### XYZ
+<img height="500" data-src="img/1_XYZ.png">
+
+
+--
+## Thema 6: Linked Open Data
+
+---
+### XYZ
+<img height="500" data-src="img/1_XYZ.png">
+
+
+--
+## Thema 7: Visualisierung
+
+---
+### XYZ
+<img height="500" data-src="img/1_XYZ.png">
+
+
+--
+## Thema 8: Open Science
+
+---
+### XYZ
+<img height="500" data-src="img/1_XYZ.png">
 
 
 
