--- a/index.html
+++ b/index.html
@@ -46,66 +46,55 @@
 
 ---
 ### Was ist die Prüfungsleistung?
-Come up with your own project idea, which proposes to develop:
-1. a new commercial product or service
-2.
-3.
-Target audience: journalists, publishers, social media companies, libraries,...
-a new tool/application for the benefit of society
-Target audience: policymakers, population, end-users,...
-a new tool/application for researching media / communication /
-society / literature
-Target audience: Researchers in DH, Linguistics, Media studies, Social Science,...
-Hint: It is adviced to align your project idea either with a topic from the
-lecture „Einführung in die Digital Humanities“ or „Anwendungen der
-Künstlichen Intelligenz und Computerlinguistik“!
-Prof. Dr. Achim Rettinger
+* Entwickeln und präsentieren Sie im Team eine Projektidee
+* Mögliche Bereiche
+  * ein neues Produkt oder einen Service
+  * eine neue Anwendung mit gesellschaftlichem Nutzen
+  * eine neue Anwendung für Medien, Kommunikation, Literatur, etc. 
+* Mögliche Zielgruppen
+  * Journalisten, Verlage, Social Media, Bibliotheken
+  * Endnutzer:innen, "die Bevölkerung"
+  * Forschende in DH, CL, Medienwissenschaften, etc. 
+* Themenzuordnung
+  * Entweder aus dem Bereich der "Einführung in die Digital Humanities"
+  * oder: "Anwendungen der Künstlichen Intelligenz und Computerlinguistik"
 
-47Prüfungsleistung für das Modul “Einführung in die Text- und Medienanalyse”
-• We already assigned each of you to a team via the breakout rooms J
-• If you didn’t make it into a team / there are issues with the assignment: send a mail to Jeldo
-(s2jemepp@uni-trier.de).
-• We will set up a group in StudIP for each team.
-• Meet regularly and self-organized within your team to develop a project idea (e.g. use your
-university zoom accounts https://uni-trier.zoom.us)
-• Prepare to present your project idea at the end of the semester via
-• A one-slide-one-minute presentation
-• A poster presentation
-• Hand in your project title, slide and poster before July 12 (via StudIP).
-• Present your slide and discuss your poster on Thursday, July 15, likely via Zoom or wonder.me
-• We will grade your project idea according to the following criteria
-•
-•
-•
-•
-Innovation & Interdisciplinarity: How novel is your idea?
-Relevance & Impact: Is it useful?
-Feasibility: Can it be done?
-Teamwork: Have you been effective as a team?
-Prof. Dr. Achim Rettinger
+---
+### Prüfungsleistung: Ablauf
+* We already assigned each of you to a team via the breakout rooms J
+* If you didn’t make it into a team / there are issues with the assignment: send a mail to Jeldo (s2jemepp@uni-trier.de).
+* We will set up a group in StudIP for each team.
+* Meet regularly and self-organized within your team to develop a project idea (e.g. use your university zoom accounts https://uni-trier.zoom.us)
+* Prepare to present your project idea at the end of the semester via
+  * A one-slide-one-minute presentation
+  * A poster presentation
+* Hand in your project title, slide and poster before July 12 (via StudIP).
+* Present your slide and discuss your poster on Thursday, July 15, likely via Zoom or wonder.me
+
+---
+### Wie wird die Projektidee bewertet? 
+* We will grade your project idea according to the following criteria
+  * Innovation & Interdisciplinarity: How novel is your idea?
+  * Relevance & Impact: Is it useful?
+  * Feasibility: Can it be done?
+  * Teamwork: Have you been effective as a team?
 
 
-48Noch mehr Formalitäten
-• Sie müssen sich zu der Prüfung individuell auf PORTA anmelden.
-• Anmeldezeitraum: ca. 2-6 Wochen vor dem Prüfungstermin.
-• Wenn Sie nicht zur Prüfung angemeldet sind, werden Sie nicht zur Prüfung zugelassen.
-• Nach Bewertung Ihrer Prüfungsleistung können Sie das Ergebnis der Prüfung in PORTA nachschlagen.
+---
+### Noch mehr Formalitäten
+* Sie müssen sich zu der Prüfung individuell auf PORTA anmelden.
+* Anmeldezeitraum: ca. 2-6 Wochen vor dem Prüfungstermin.
+* Wenn Sie nicht zur Prüfung angemeldet sind, werden Sie nicht zur Prüfung zugelassen.
+* Nach Bewertung Ihrer Prüfungsleistung können Sie das Ergebnis der Prüfung in PORTA nachschlagen.
 
 
 ---
 ### Kontakt bei Fragen
-
-• Wenn Sie Probleme haben, sich zu Veranstaltungen oder Prüfungen anzumelden, wenden Sie sich bitte an das Hochschulprüfungsamt.
-• Wenn Sie Fragen organisatorischer Art zu dieser Vorlesung „Anwendungen der Künstlichen Intelligenz und Computerlinguistik“ und zum Modul
-“Einführung in die Text- und Medienanalyse” haben, wenden Sie sich an Rita Thielen (thielenr@uni-trier.de).
-• Wenn Sie inhaltliche Fragen zur Vorlesung oder zu ihren Projekten haben, wenden Sie sich an
-• Christof Schöch (schoech@uni-trier.de), wenn es sich um ein Thema aus der Veranstaltung „Einführung in die Digital Humanities“ handelt.
-• Achim Rettinger (rettinger@uni-trier.de), wenn es sich um ein Thema aus dieser Veranstaltung „Anwendungen der Künstlichen Intelligenz und
-Computerlinguistik“ handelt.
-• Wenn Sie organisatorische/technische Fragen zur Gruppeneinteilung, Minute-Madness-Session, Poster-session,... haben, wenden Sie sich bitte an Jeldo
-(s2jemepp@uni-trier.de).
-• Wenn Sie generelle Fragen zum STeM-Studiengang und wie ihr Studiengang mit STeM zusammenhängt haben, wenden Sie sich an Sven Naumann
-(naumsven@uni-trier.de).
+* Anmeldung zu Veranstaltungen oder Prüfungen: bitte an das Hochschulprüfungsamt wenden.
+* Fragen organisatorischer Art zu diesem Modul: Rita Thielen (thielenr@uni-trier.de).
+* Inhaltliche Fragen zur DH-Vorlesung oder zu ihrer DH-Projektidee haben: Christof Schöch (schoech@uni-trier.de)
+* Organisatorische/technische Fragen zur Gruppeneinteilung oder Postersession etc. haben: Jeldo (s2jemepp@uni-trier.de).
+* Generelle Fragen zum STeM-Studiengang: Sven Naumann (naumsven@uni-trier.de).
 
 
 
@@ -151,15 +140,85 @@ Computerlinguistik“ handelt.
 
 ---
 ### whatisdigitalhumanities.com
-<img height="500" data-src="img/1_whatisdh.png">
+<a href="https://whatisdigitalhumanities.com/"><img height="500" data-src="img/1_whatisdh.png"></a>
+
+---
+### Kleine Fächer
+<a href="https://www.kleinefaecher.de/kartierung/kleine-faecher-von-a-z.html?tx_dmdb_monitoring%5BdisciplineTaxonomy%5D=140&cHash=c5b76ccd171ecce8fe0ed45c4afaa5bc"><img height="500" data-src="img/1_kleinefaecher.png"></a>
+
+
+---
+## (1) Rechercheaufgaben 
+<br/>
+
+* Zur Frage der Definition der Digital Humanities<br/>(whatisdigitalhumanities.com)
+* Zur Frage der Themen der Digital Humanities<br/>(IDHC, ZfdG)
+ 
+
+---
+## (2) DH als Disziplin? Aktuelle Trends
+
+---
+### Institutionalisierung
+* Verbände 
+  * D: DHd-Verband, fachbezogene AGs
+  * Int'l: EADH, ADHO, TEI, MEI, ESTS
+* Jahrestagungen 
+  * D: DHd-Verband
+  * Int'l: DHBenelux, AIUCD, HDH, DHN, DH Conference, etc.
+* Zeitschriften
+  * D: Zeitschrift für digitale Geisteswissenschaften (ZfdG)
+  * Int'l: DSH, DHQ, Digital Studies / Le champ numérique, Cultural Analytics, Umanistica digitale, Humanités numériques, uvm.
+* Studiengänge 
+  * D und Int'l: siehe [DH Course Registry](https://registries.clarin-dariah.eu/courses/)
+* Professuren
+  * D: siehe [Portal Kleine Fächer](https://www.kleinefaecher.de/kartierung/kleine-faecher-von-a-z.html?tx_dmdb_monitoring%5BdisciplineTaxonomy%5D=140&cHash=c5b76ccd171ecce8fe0ed45c4afaa5bc)
+
+
+---
+### Ausdifferenzierung
+* Digitale Editionswissenschaften
+* Digital History
+* Computational Literary Studies
+* Digitale Kunstgeschichte
+* Digitale Musikwissenschaften<br/>/ Music Information Retrieval
+* Digitale Archäologie
+* Critical Code Studies
+* Game Studies
+* Digital Cultural Heritage Studies
+* Computerlinguistik
+* Angewandte Informatik
+* ...
+
+
+---
+### Was bedeutet das eigentlich? 
+* Institutionalisierung <!-- .element: class="fragment" data-fragment-index="1" -->
+  * => Konsolidierung als Disziplin
+  * => Gemeinsame fachliche Identität
+* Ausdifferenzierung <!-- .element: class="fragment" data-fragment-index="2" -->
+  * => Viele Teildisziplinen
+  * => Spezifischere fachliche Identitäten
+  * => Diffusion in die etablierten Disziplinen?
+* Folgefragen <!-- .element: class="fragment" data-fragment-index="3" -->
+  * Gibt es ein Mainstreaming der Digital Humanities?
+  * Wird der Begriff Digital Humanities irgendwann obsolet?
+  * Was verbindet alle DH-Teilbereiche?
+
+
+---
+### Abschluss: Lektüreempfehlung
+<br/>
+
+* ["Was ist DH?"](https://www.zotero.org/groups/2162827/dh-bibliographie_trier/collections/KA42XEA4) auf Zotero
 
 
 --
 ## Thema 2: Digitale Edition
 
 ---
-### XYZ
-<img height="500" data-src="img/1_XYZ.png">
+#### Letters of Van Gogh
+<a href="http://vangoghletters.org/vg/"><img height="500" data-src="img/2_vangogh.png"></a>
 
 --
 ## Thema 3: Computational Literary Studies
