--- a/index.html
+++ b/index.html
@@ -61,23 +61,23 @@
 
 ---
 ### Prüfungsleistung: Ablauf
-* We already assigned each of you to a team via the breakout rooms J
-* If you didn’t make it into a team / there are issues with the assignment: send a mail to Jeldo (s2jemepp@uni-trier.de).
-* We will set up a group in StudIP for each team.
-* Meet regularly and self-organized within your team to develop a project idea (e.g. use your university zoom accounts https://uni-trier.zoom.us)
+* Sie wurden bereits einer Gruppe zugeteilt
+* Wenn das bei Ihnen nicht der Fall ist, bitte an Jeldo Meppen wenden (s2jemepp@uni-trier.de).
+* Jede Gruppe wird dann in StudIP einem Team zugeordnet
+* Die Teams treffen sich regelmäßig und selbständig, um eine Projektidee zu entwickeln (u.a. über Zoom)
+* Am Ende des Semsters wird die Projektidee präsentiert: 
 * Prepare to present your project idea at the end of the semester via
-  * A one-slide-one-minute presentation
-  * A poster presentation
-* Hand in your project title, slide and poster before July 12 (via StudIP).
-* Present your slide and discuss your poster on Thursday, July 15, likely via Zoom or wonder.me
+  * Als "one-slide-one-minute" Präsentation
+  * Als Poster-Präsentation
+* Projekttitel, Präsentation oder Poster bis 12. Juli über StudIP einreichen
+* Präsentation oder Poster am Donnerstag, den 15. Juli vorstellen (via Zoom oder Wonder.me)
 
 ---
 ### Wie wird die Projektidee bewertet? 
-* We will grade your project idea according to the following criteria
-  * Innovation & Interdisciplinarity: How novel is your idea?
-  * Relevance & Impact: Is it useful?
-  * Feasibility: Can it be done?
-  * Teamwork: Have you been effective as a team?
+* Wie innovativ, interdisziplinär und originell ist die Idee?
+* Relevanz und Impact: Wie nützlich ist die Idee?
+* Machbarkeit: Könnte die Idee umgesetzt werden?
+* Teamwork: Wie gut hat das Team zusammengearbeitet?
 
 
 ---
