--- a/index.html
+++ b/index.html
@@ -213,6 +213,101 @@
 * ["Was ist DH?"](https://www.zotero.org/groups/2162827/dh-bibliographie_trier/collections/KA42XEA4) auf Zotero
 
 
+---
+### Rechercheaufgabe 1 (IDHC)
+1. Joseph Rudman: authorship attribution, statistics, stylistics, shakespeare und collaboration; 1985 bis 2017
+1. "Data Modeling": 13 Einträge (keyword!) 
+1. Topic Modeling: seit 2013
+1. TextGrid: 4 Workshops (nur Workshops!)
+1. Erste Konferenz mit Details: 
+ 1. 1964 (Dez), "Conference on the Use of Computers in Humanistic Research", Rutgers 
+ 1. Themen: Computer und Literatur, Geschichte, Musikwissenschaft
+ 1. 1964 (Sept) - Literary Data Processing Conference - Yorktown Heights  (incomplete)
+ 1. (Erwähnt auch 1960, "Maschinelle Methoden der literarischen Analyse undder Lexikographie", Tübingen)
+
+---
+### Rechercheaufgabe 1 (IDHC)
+* Wünsche für die Plattform
+  * Übergreifende Suchleiste
+  * Filter nach Keywords funktioniert nicht (gut)
+  * übersichtlicher
+  * Filter nach complete / incomplete data
+  * Filter nach Ort und/oder Jahr
+* Nützlich, um zu verstehen, was DH ist?
+  * Entwicklung über die Zeit
+  * relevante Themen
+  * guter Überblick
+  * Keywords sind nützlich
+  * Nein, keine Definition(en)
+  * Nein: Nur Begriffe, keine Projekte
+
+
+---
+### Rechercheaufgabe 2 (whatisdigitalhumanities?)
+* Gemeinsamkeiten
+  * Alle zu Digitalisierung / Technologie
+  * Vorteile der DH
+  * Alle eher unpräzise  
+* Unterschiede
+  * Sehr unterschiedlicher Stil
+  * Unterschiedliche Länge
+  * Teils spielen Medien eine Rolle
+  * Teils sehr persönlich
+* Vergleich mit Wikipedia
+  * Umfassender
+  * Sachlicher
+  * Mehr Fokus auf Humanities
+  * Mehr Beispiele
+  * Perspektive: Digitalisierung mit geisteswiss. Methoden
+  * Bedeutung von Daten
+
+
+
+---
+### Rechercheaufgabe 3 (ZfdG)
+* Themen, die Sie interessieren
+  * Literaturwissenschaft
+  * Geschichtswissenschaft
+  * Umgang mit Unsicherheit/Zweifel
+  * Digitalisierung
+  * Open Educational Resources
+  * Filme
+  * Karten
+  * Social Networks
+  * Märchenforschung
+  * Blockchain
+* Dominierende Themen 2019-2020
+  * Netzwerke
+  * Modellierung
+  * Methodologie
+  * (digitale) Literaturwissenschaft
+  * Edition
+
+
+---
+### Rechercheaufgabe 4 (Screencast)
+* (1) Mit welchem Fach fühlen Sie sich verbunden? 
+  * Medienwissenschaften
+  * Digitale Musikwissenschaften 
+  * Computerlinguistik
+  * Digitale Kunstgeschichte
+  * Digital History 
+  * Sprachwissenschaften
+  * Filmwissenschaft
+  * Philosophie
+  * Politikwissenschaft
+  * Game Studies
+  * Computational Literary Studies / Litwiss.
+
+
+---
+### Rechercheaufgabe 4 (Screencast)
+* (2) Stand in ihrem Fach?
+  * Diskussionsbeiträge
+
+
+
+
 --
 ## Thema 2: Digitale Edition
 
@@ -220,52 +315,134 @@
 #### Letters of Van Gogh
 <a href="http://vangoghletters.org/vg/"><img height="500" data-src="img/2_vangogh.png"></a>
 
+
+
+---
+### (1) Vorteile Digitaler Editionen
+1. Durchsuchbarkeit / Übersichtlichkeit
+1. Dynamik / Interaktivität: verschiedene Perspektiven
+1. Text + Raum für Erläuterungen
+1. Zusammenführung großer Datenmengen
+1. Keine Platzbegrenzung: Varianten, Kommentare, ...
+1. Multimedialität: Text, Bild, Ton
+1. Unabhängig von Ort, Zeit, Budget nutzbar
+1. Weiterverarbeitung der Daten
+1. Vernetzung mit anderen Ressourcen
+
+
+---
+### (1) Weitere Vorteile
+1. "Umweltfreundlich" (kein Druck)
+1. "Langfristige Aufbewahrung fragiler Objekte"
+1. "Text ist gesichert" = Edition; nicht speziell digitale Edition
+1. "erhöhte Authentizität und Transparenz"
+1. "größere Reichweite": guter Punkt (Anbietenden-Perspektive)
+1. "jederzeit erweiterbar / korrigierbar": siehe http://faustedition.net/, "1.2 RC"
+1. "Vernetzung über Normdaten": zum Beispiel GND (Autor:innen, Werke) oder TGN (Ortsnamen)
+1. "Kann auf allen Geräten genutzt werden": auch mobile Endgeräte
+
+
+---
+### (1) Weitere Punkte
+1. "Visualisierungen": visuelle,<br/>ggfs. dynamische Aufbereitung der Daten
+1. Möglichkeit der Kommentierung
+1. Ästhetisch ansprechende Umsetzung
+1. Nachteil: sehr großer Aufwand bei der Erstellung
+
+
+---
+### Typen von Editionen
+1. Faksimile-Ausgabe
+1. Textarchiv
+1. Knowledge Site
+1. Social Edition
+1. Historisch-Kritische Ausgabe
+1. Medien-Edition
+
+
+---
+### (2) Schlegel-Briefedition: Vorteile?
+* https://august-wilhelm-schlegel.de/briefedigital/ 
+* Flexibler Zugriff: z.B. Filter nach Kategorien, Register
+* Durchsuchbarkeit: ja, Volltextsuche
+* zuverlässiger Text: (woran festmachen?)
+* Flexible Darstellung: ja, Anzeigeoptionen (links / rechts / oben)
+* Visualisierungen: Wordle der Korrespondent:innen
+* Erläuterungen: [Beispiel](https://august-wilhelm-schlegel.de/version-10-20/briefid/860)
+* Einfache Erreichbarkeit: ja
+* Transparenz: Faksimile zur Transkription (prüfbar)
+
+
+
+---
+### (2) Schlegel-Briefedition
+* Normdaten: vorhanden (GND)
+* Ergänzungen: ja, siehe "Version 10-2020"
+* Keine Platzbegrenzung / große Datenmengen: ja,  5000 Briefe!
+* Multimedialität: Text und Bild, aber kein Audio
+* Umweltfreundlich: ja (aber Server!)
+* Weitere Analysen: ja, durch XML (aber kein "bulk download")
+* Ansonsten positiv: Zitierempfehlung
+  
+  
+
+---
+### (2) Schlegel-Briefedition
+* Übersichtlichkeit?
+* Vernetzung zu anderen Ressourcen?
+* Interaktivität?
+* Übersetzungen?
+* Texte bearbeiten? 
+* Texte kommentieren?
+
+
+---
+### (3) Digital Scholarly Editions
+* https://v3.digitale-edition.de/
+* Mehrfach genannt
+ * Faustedition, http://faustedition.net/
+ * Jane Austen, https://janeausten.ac.uk/index.html
+ * Humboldt-Edition, https://edition-humboldt.de/)
+ * DDR-im-Blick, http://www.ddr-im-blick.de/
+ * Mozart-Briefe, https://dme.mozarteum.at/briefe-dokumente/#
+
+
+
+
+
+
 --
 ## Thema 3: Computational Literary Studies
 
----
-### XYZ
-<img height="500" data-src="img/1_XYZ.png">
+
 
 
 --
 ## Thema 4: Digitale Musikwissenschaft
 
----
-### XYZ
-<img height="500" data-src="img/1_XYZ.png">
+
 
 
 --
 ## Thema 5: Stilometrische Autorschaftsattribution
 
----
-### XYZ
-<img height="500" data-src="img/1_XYZ.png">
+
 
 
 --
 ## Thema 6: Linked Open Data
 
----
-### XYZ
-<img height="500" data-src="img/1_XYZ.png">
+
 
 
 --
 ## Thema 7: Visualisierung
 
----
-### XYZ
-<img height="500" data-src="img/1_XYZ.png">
+
 
 
 --
 ## Thema 8: Open Science
-
----
-### XYZ
-<img height="500" data-src="img/1_XYZ.png">
 
 
 
