--- a/index.html
+++ b/index.html
@@ -319,35 +319,35 @@
 
 ---
 ### (1) Vorteile Digitaler Editionen
-1. Durchsuchbarkeit / Übersichtlichkeit
-1. Dynamik / Interaktivität: verschiedene Perspektiven
-1. Text + Raum für Erläuterungen
-1. Zusammenführung großer Datenmengen
-1. Keine Platzbegrenzung: Varianten, Kommentare, ...
-1. Multimedialität: Text, Bild, Ton
-1. Unabhängig von Ort, Zeit, Budget nutzbar
-1. Weiterverarbeitung der Daten
-1. Vernetzung mit anderen Ressourcen
+1. Durchsuchbarkeit / Übersichtlichkeit  <!-- .element: class="fragment" data-fragment-index="1" --> 
+1. Dynamik / Interaktivität: verschiedene Perspektiven <!-- .element: class="fragment" data-fragment-index="2" -->
+1. Text + Raum für Erläuterungen <!-- .element: class="fragment" data-fragment-index="3" -->
+1. Zusammenführung großer Datenmengen <!-- .element: class="fragment" data-fragment-index="4" -->
+1. Keine Platzbegrenzung: Varianten, Kommentare, ... <!-- .element: class="fragment" data-fragment-index="5" -->
+1. Multimedialität: Text, Bild, Ton <!-- .element: class="fragment" data-fragment-index="6" -->
+1. Unabhängig von Ort, Zeit, Budget nutzbar <!-- .element: class="fragment" data-fragment-index="7" -->
+1. Weiterverarbeitung der Daten <!-- .element: class="fragment" data-fragment-index="8" -->
+1. Vernetzung mit anderen Ressourcen <!-- .element: class="fragment" data-fragment-index="9" -->
 
 
 ---
 ### (1) Weitere Vorteile
-1. "Umweltfreundlich" (kein Druck)
-1. "Langfristige Aufbewahrung fragiler Objekte"
-1. "Text ist gesichert" = Edition; nicht speziell digitale Edition
-1. "erhöhte Authentizität und Transparenz"
-1. "größere Reichweite": guter Punkt (Anbietenden-Perspektive)
-1. "jederzeit erweiterbar / korrigierbar": siehe http://faustedition.net/, "1.2 RC"
-1. "Vernetzung über Normdaten": zum Beispiel GND (Autor:innen, Werke) oder TGN (Ortsnamen)
-1. "Kann auf allen Geräten genutzt werden": auch mobile Endgeräte
+1. "jederzeit erweiterbar / korrigierbar": siehe http://faustedition.net/, "1.2 RC" <!-- .element: class="fragment" data-fragment-index="1" -->
+1. "Umweltfreundlich" (kein Druck) <!-- .element: class="fragment" data-fragment-index="2" -->
+1. "Langfristige Aufbewahrung fragiler Objekte" <!-- .element: class="fragment" data-fragment-index="3" -->
+1. "Text ist gesichert" = Edition; nicht speziell digitale Edition <!-- .element: class="fragment" data-fragment-index="4" -->
+1. "erhöhte Authentizität und Transparenz" <!-- .element: class="fragment" data-fragment-index="5" -->
+1. "größere Reichweite": guter Punkt (Anbietenden-Perspektive) <!-- .element: class="fragment" data-fragment-index="6" -->
+1. "Vernetzung über Normdaten": zum Beispiel GND (Autor:innen, Werke) oder TGN (Ortsnamen) <!-- .element: class="fragment" data-fragment-index="7" -->
+1. "Kann auf allen Geräten genutzt werden": auch mobile Endgeräte <!-- .element: class="fragment" data-fragment-index="8" -->
 
 
 ---
 ### (1) Weitere Punkte
-1. "Visualisierungen": visuelle,<br/>ggfs. dynamische Aufbereitung der Daten
-1. Möglichkeit der Kommentierung
-1. Ästhetisch ansprechende Umsetzung
-1. Nachteil: sehr großer Aufwand bei der Erstellung
+1. "Visualisierungen": visuelle,<br/>ggfs. dynamische Aufbereitung der Daten <!-- .element: class="fragment" data-fragment-index="1" -->
+1. Möglichkeit der Kommentierung <!-- .element: class="fragment" data-fragment-index="2" -->
+1. Ästhetisch ansprechende Umsetzung <!-- .element: class="fragment" data-fragment-index="3" -->
+1. Nachteil: sehr großer Aufwand bei der Erstellung <!-- .element: class="fragment" data-fragment-index="4" -->
 
 
 ---
@@ -363,37 +363,37 @@
 ---
 ### (2) Schlegel-Briefedition: Vorteile?
 * https://august-wilhelm-schlegel.de/briefedigital/ 
-* Flexibler Zugriff: z.B. Filter nach Kategorien, Register
-* Durchsuchbarkeit: ja, Volltextsuche
-* zuverlässiger Text: (woran festmachen?)
-* Flexible Darstellung: ja, Anzeigeoptionen (links / rechts / oben)
-* Visualisierungen: Wordle der Korrespondent:innen
-* Erläuterungen: [Beispiel](https://august-wilhelm-schlegel.de/version-10-20/briefid/860)
-* Einfache Erreichbarkeit: ja
-* Transparenz: Faksimile zur Transkription (prüfbar)
+* Flexibler Zugriff: z.B. Filter nach Kategorien, Register <!-- .element: class="fragment" data-fragment-index="1" -->
+* Durchsuchbarkeit: ja, Volltextsuche <!-- .element: class="fragment" data-fragment-index="2" -->
+* zuverlässiger Text: (woran festmachen?) <!-- .element: class="fragment" data-fragment-index="3" -->
+* Flexible Darstellung: ja, Anzeigeoptionen (links / rechts / oben) <!-- .element: class="fragment" data-fragment-index="4" -->
+* Visualisierungen: Wordle der Korrespondent:innen <!-- .element: class="fragment" data-fragment-index="5" -->
+* Einfache Erreichbarkeit: ja <!-- .element: class="fragment" data-fragment-index="6" -->
+* Transparenz: Faksimile zur Transkription (prüfbar) <!-- .element: class="fragment" data-fragment-index="7" -->
+* Normdaten: vorhanden (GND) <!-- .element: class="fragment" data-fragment-index="8" -->
 
 
 
 ---
 ### (2) Schlegel-Briefedition
-* Normdaten: vorhanden (GND)
-* Ergänzungen: ja, siehe "Version 10-2020"
-* Keine Platzbegrenzung / große Datenmengen: ja,  5000 Briefe!
-* Multimedialität: Text und Bild, aber kein Audio
-* Umweltfreundlich: ja (aber Server!)
-* Weitere Analysen: ja, durch XML (aber kein "bulk download")
-* Ansonsten positiv: Zitierempfehlung
+* Erläuterungen: [Beispiel](https://august-wilhelm-schlegel.de/version-10-20/briefid/860) <!-- .element: class="fragment" data-fragment-index="1" -->
+* Ergänzungen: ja, siehe "Version 10-2020" <!-- .element: class="fragment" data-fragment-index="2" -->
+* Keine Platzbegrenzung / große Datenmengen: ja,  5000 Briefe! <!-- .element: class="fragment" data-fragment-index="3" -->
+* Multimedialität: Text und Bild, aber kein Audio <!-- .element: class="fragment" data-fragment-index="4" -->
+* Umweltfreundlich: ja (aber Server!) <!-- .element: class="fragment" data-fragment-index="5" -->
+* Weitere Analysen: ja, durch XML (aber kein "bulk download") <!-- .element: class="fragment" data-fragment-index="6" -->
+* Ansonsten positiv: Zitierempfehlung <!-- .element: class="fragment" data-fragment-index="7" -->
   
   
 
 ---
 ### (2) Schlegel-Briefedition
-* Übersichtlichkeit?
-* Vernetzung zu anderen Ressourcen?
-* Interaktivität?
-* Übersetzungen?
-* Texte bearbeiten? 
-* Texte kommentieren?
+* Übersichtlichkeit? <!-- .element: class="fragment" data-fragment-index="1" -->
+* Vernetzung zu anderen Ressourcen? <!-- .element: class="fragment" data-fragment-index="2" -->
+* Interaktivität? <!-- .element: class="fragment" data-fragment-index="3" -->
+* Übersetzungen? <!-- .element: class="fragment" data-fragment-index="4" -->
+* Texte bearbeiten?  <!-- .element: class="fragment" data-fragment-index="5" -->
+* Texte kommentieren? <!-- .element: class="fragment" data-fragment-index="6" -->
 
 
 ---
@@ -415,7 +415,10 @@
 ## Thema 3: Computational Literary Studies
 
 
-
+---
+### Komödien, Tragödien, Tragikomödien
+<img height="450" data-src="img/3_threeway_pca.png">
+<br/><p>(rot: Komödien; blau: Tragödien; grün: Tragikomödien)</p>
 
 --
 ## Thema 4: Digitale Musikwissenschaft
