--- a/index.html
+++ b/index.html
@@ -420,8 +420,211 @@
 <img height="450" data-src="img/3_threeway_pca.png">
 <br/><p>(rot: Komödien; blau: Tragödien; grün: Tragikomödien)</p>
 
+
+---
+### Rechercheaufgabe 1: Forschungsfragen
+* Frage: Beschreiben Sie eine konkrete Fragestellung, die Sie sich selbst überlegt haben, für die man eine der erwähnten Methoden anwenden könnte. 
+* Warum glauben Sie, dass die Methode, die Sie gewählt haben, gut für die gewählte Fragestellung geeignet sein könnte?
+
+---
+### Kontrastive Analyse 1a (explorativ) 
+* Berichterstattung zur Pandemie in D und UK (Sprache!)
+* Emails zu Kategorien zuordnen (bzw.: Merkmale der Klassen finden)
+* Wie veränderten sich die Lyrics der Top 20 Rap Songs jedes Jahres in den letzten zehn Jahren?
+* Unterscheidet sich die Wortverwendung in Einzelchats vs. Gruppenchats?
+* Berichterstattung verschiedener Zeitungen zu einem Thema
+* Worin unterscheiden sich satirische Texte und Kritik?
+* Vergleich von Schiller und Shakespeare in der Wortwahl
+* Ist Schillers Sprache verständlicher als Goethes Sprache? (Operationalisierung?)
+
+---
+### Kontrastive Analyse 1b (explorativ) 
+* Wie unterscheiden sich die verschiedenen Texte der Poetry Slammer an einem Abend? 
+* Werden alle Parteien in der öffentlich-rechtlichen Medienberichterstattung, vor anstehenden Wahlen, gleichermaßen behandelt? 
+* Wenn man romantische und klassische Romane vergleicht, welche Wörter werden in beiden Genres am häufigsten verwendet?
+* Woran erkennt der Leser, ob es sich um Fachliteratur oder Unterhaltungsliteratur handelt? (rezeptionsorientiert gefragt!)
+* Welcher Wortschatz sorgt in welcher Epoche (z.B. Romantik) dafür, dass ein bestimmtes literarisches Werk populär wird? (siehe: The Bestseller Code)
+* Wie unterscheidet sich der Schreibstil des ersten Harry Potter Buches im Vergleich zum letzten Harry Potter Buches? 
+
+---
+### Kontrastive Analyse 1c (explorativ) 
+* In welchen Punkten gleichen und unterscheiden sich Goethes Werke von 1774 bis 1780, mit seinen Werken von 1794 bis 1800?
+* Welche Wörter werden in Komödien am häufigsten verwendet und sind somit charakteristisch für Komödien?
+
+---
+### Kontrastive Analyse 2 (gezielt)
+* Goethe: "Trauer"-Motiv in Werther vs. Faust (eigene "Keywords")
+* Vergleich der Wortlänge in Wissenschaftsprosa vs. andere Texte
+* Wie häufig kommt im Genre Drama im Vergleich zum Genre Horror das Wort „Tod“ vor?
+* Prüfen der Übereinstimmung zwischen Erwartung und Antwort in Klausuren
+* Bekommt Söder oder Laschet mehr Aufmerksamkeit (=Nennungen) in den Medien?
+* Wie sieht das Verhältnis in Texten zwischen Substantiven und (Eigen-)namen aus.
+
+---
+### Clustering
+* Autorschaft von Shakespeare (siehe: Stilometrische Autorschaftsattribution)
+* Biblische Motive in Süskinds Parfum identifizieren (siehe: "Text Re-Use")
+* Wie stark unterschiedlich sind die Texte zueinander, bei verschiedenen Autoren?
+* Das Einordnen von Texten (z.B. Zeitungsartikel, Romane) nach ihren Themen (siehe: Topic Modeling)
+
+---
+### Klassifikation
+* Texte in Online-Bibliotheken ordnen (Klassen zuordnen)
+* Pro- und Contra-Argumente in Texten identifizieren (siehe: "Argument Mining")
+* Gehören alle Stücke eines/r Musikers/in zur gleichen Musikrichtung? (Merkmale, Klassen)
+* Zu welcher Textart kann man einen Text zuordnen?
+* Welche Altersempfehlung sollte einem Roman gegeben werden? (Klassifikation)
+* Welche der vorhandenen Texte sind antik und welche sind modern? (siehe: Chrono-Stilometrie)
+
+---
+### Suche in Texten, ggfs. mit RegEx 
+* Text finden, in denen Ernie und Bert vorkommen
+* Prüfen, ob Texte / Songs / etc. als "explicit content" markiert werden müssen (Jugendschutz, Demokratie-Gefährdung, etc.)
+* Alle Wörter in einem Text, die mit "S" beginnen: Reguläre Ausdrücke (ja!)
+* Wie oft kommt das Wort "Thor" im Faust in der direkten Rede vor? (Klassifikation+Suche)
+* Wie oft kommt eine beliebige Zeichenkette in einem Text vor?
+* Welcher der beiden deutschen Autoren (im Vergleich zueinander stehen Goethe und Schiller) verwendet in seinen lyrischen Werken bzw. Gedichten öfter ein „Lyrisches Ich“?
+* Wie oft wird eine bestimmte Zeichenkette in einem Text verwendet?
+
+---
+### Weitere Fragen / Methoden
+* Inwiefern lässt sich ein positiv bzw. negativ geprägtes Bild auf die Corona-Pandemie in verschiedenen ausgewählten Berichterstattungen erkennen? (siehe: Sentiment Analyse)
+* In welchen Tragödien oder Krimis erhält der Leser einen besonders guten Einblick in die Gedankengänge des Protagonisten und wird auch in das Geschehen integriert? (operationalisiert über: Anteile an Monologen des Protagonisten)
+* Gibt es reine Reime in diesem Text?
+* Gibt es sprachliche Gemeinsamkeiten zwischen den Genres der Fantasy und Dystopie? 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 --
 ## Thema 4: Digitale Musikwissenschaft
+
+
+---
+### Bereiche der digitalen Musikwissenschaft
+* Digitale Musikedition <!-- .element: class="fragment" data-fragment-index="1" -->
+* Optical Music Recognition <!-- .element: class="fragment" data-fragment-index="2" -->
+* Music Information Retrieval <!-- .element: class="fragment" data-fragment-index="3" -->
+* Music Generation <!-- .element: class="fragment" data-fragment-index="4" -->
+* Quantitative Musikgeschichte <!-- .element: class="fragment" data-fragment-index="5" -->
+
+
+---
+### In welcher Form liegt Musik digital vor?
+* Repräsentation des Notentextes <!-- .element: class="fragment" data-fragment-index="1" -->
+  * Notation nach kulturell definierten Konventionen
+  * visuelle Repräsentation (Druck, PDF)
+  * dient vor allem der Aufführung durch Menschen
+* Symbolische Repräsentation <!-- .element: class="fragment" data-fragment-index="2" -->
+  * diskrete Einheiten mit ihren Eigenschaften<br/>(Noten mit Tonhöhe, Dauer, Lautstärke, Instrument)
+  * kodiert nach Datenstandards (XML/MEI, MusicXML; MIDI)
+  * maschinenlesbar, kann Synthesizer steuern
+* Repräsentation des Audiosignals <!-- .element: class="fragment" data-fragment-index="3" -->
+  * kontinuierliches physikalisches Signal (Schallwellen)
+  * kodiert in Audiodateien (MP3, WAV, etc.)
+  * hörbar; Vertriebsformat von Musik
+  
+
+---
+### Beispiel Notentext 
+<img height="450" data-src="img/sheet-music.png">
+<br/><small>(Quelle: <a href="https://www.musicxml.com/de/music-in-musicxml/example-set/">https://www.musicxml.com/de/music-in-musicxml/example-set/</a>.)</small>
+
+---
+### Beispiel MusicXML
+<a href="img/musicxml-wikipedia.png"><img height="450" data-src="img/musicxml-wikipedia.png"></a>
+<br/><small>(Quelle: <a href="https://en.wikipedia.org/wiki/MusicXML">https://en.wikipedia.org/wiki/MusicXML</a>, CC BY-SA.)</small>
+
+---
+### Beispiel Audiodaten
+<a href="img/mueller_audiodaten1.png"><img height="250" data-src="img/mueller_audiodaten1.png"></a>
+<a href="img/mueller_audiodaten2.png"><img height="250" data-src="img/mueller_audiodaten2.png"></a>
+<br/><small><br/>Links: Prinzip; rechts: authentische Aufnahme.
+<br/><br/>(Quelle: Müller, Advances in Music Information Retrieval, 2015.)</small>
+
+
+---
+### Optical Music Recognition
+<img height="450" data-src="img/omr-definitions-calvo.png">
+
+
+---
+### Digitale Musikedition
+<a href="img/beethoven0.png"><img height="200" data-src="img/beethoven0.png"></a>&nbsp;&nbsp;&nbsp;<a href="img/beethoven1.png"><img height="200" data-src="img/beethoven1.png"></a><br/><a href="img/beethoven2.png"><img height="200" data-src="img/beethoven2.png"></a>&nbsp;&nbsp;&nbsp;<a href="img/beethoven3.png"><img height="200" data-src="img/beethoven3.png"></a>
+<br/><small><a href="https://demo.beethovens-werkstatt.de/index.html">https://demo.beethovens-werkstatt.de/index.html</a></small>
+
+
+
+---
+### Music Information Retrieval
+* Eigenes Gebiet, analog zum Information Retrieval <!-- .element: class="fragment" data-fragment-index="1" -->
+* Operiert auf Noten, symbolischer Repräsentation oder Audiodaten <!-- .element: class="fragment" data-fragment-index="2" -->
+* Prinzip:  <!-- .element: class="fragment" data-fragment-index="3" -->
+  * Eine umfangreiche Sammlung von Musikstücken liegt vor
+  * Die Stücke sind als Ganze über Merkmale repräsentiert (Merkmalsraum)
+  * Ein Musikstück repräsentiert eine Abfrage ("query")
+  * Es sollen weitere, relevante Musikstücke gefunden werden
+  * Ähnliche Stücke sind gute Antworten
+* Anwendungsszenarien <!-- .element: class="fragment" data-fragment-index="4" -->
+  * Empfehlungssysteme
+  * Plagiatserkennung / Upload-Filter
+  * Künstler- oder Genre-Erkennung
+
+
+---
+### Query im Merkmalsraum
+<img height="500" data-src="img/mir-vectorspace.jpg">
+
+
+
+---
+### Music Generation
+* Verwendet Deep Learning <!-- .element: class="fragment" data-fragment-index="1" -->
+  * Deep Learning = Künstliche Neuronale Netze
+  * Wird gerne auch als KI bezeichnet
+* Vorgehensweise <!-- .element: class="fragment" data-fragment-index="1" -->
+  * Das neuronale Netz wird mit sehr vielen Musikstücken (bspw. in MIDI) trainiert
+  * Es lernt, welche Muster für diese Musik typisch sind
+  * Es kann dann mehr oder weniger lange, ähnliche Fragmente generieren
+* Welcher Output entsteht? <!-- .element: class="fragment" data-fragment-index="1" -->
+  * Meist MIDI-Output (ohne Rendering)
+  * Neuerdings: auch Audioautput
+* Herausforderungen <!-- .element: class="fragment" data-fragment-index="1" -->
+  * Musikalität: Rythmus, Melodie, Tonart
+  * Kohärenz: Struktur über größere Abschnitte hinweg
+  * Kreativität: keine einfache Wiederholung
+
+
+---
+### Lektürehinweise 
+* Briot, Jean-Pierre, and François Pachet, ‘Music Generation by Deep Learning - Challenges and Directions’, Neural Computing and Applications, 32.4 (2020), 981–93 <https://doi.org/10.1007/s00521-018-3813-6>
+* Calvo-Zaragoza, Jorge, Jan Hajič Jr, and Alexander Pacha, ‘Understanding Optical Music Recognition’, ACM Computing Surveys (CSUR), 53.4 (2020), 1–35
+* Mauch, M., R. M. MacCallum, M. Levy, and A. M. Leroi, ‘The Evolution of Popular Music: USA 1960-2010’, Royal Society Open Science, 2.5 (2015), 150081–150081 <https://doi.org/10.1098/rsos.150081>
+* Müller, Meinard, ‘Music Representations’, in Advances in Music Information Retrieval, Studies in Computational Intelligence (Berlin Heidelberg: Springer-Verlag, 2010), pp. 1–37 <https://doi.org/10.1007/978-3-642-11674-2>
+
+
+
+
+
+
+
 
 
 
